# crouton

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml
src/: colors.rs  command.rs  config.rs  crouton.rs  lib.rs  main.rs  parser.rs
src/git/: statuses.rs
