[package]
name = "crouton"
version = "0.1.0"
authors = ["ibx34 <Guamjust@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colorful = "0.2.1"
clearscreen = "1.0.6"
git2 = { version = "0.13.20", default-features = false }