[package]
name = "crouton"
version = "0.1.0"
authors = ["ibx34 <Guamjust@gmail.com>"]
edition = "2018"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colorful = "0.2.1"
clearscreen = "1.0.6"
clap = "2.33.0"
git2 = { version = "0.13.20", default-features = false }
toml = { version = "0.5.8", features = ["preserve_order"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
shadow-rs = "0.6"
shell-words = "1.0.0"

[build-dependencies]
shadow-rs = "0.6"